<resources>
    <string name="app_name">Ежедневный бюджет</string>

    //надписи
    <string name="label_category">Категории</string>
    <string name="text_editing_note">Редактирование записи</string>
    <string name="text_creating_category">Создание категории</string>
    <string name="text_editing_category">Редактирование категории</string>
    <string name="text_creating_note">Создание записи</string>
    <string name="label_list_of_categories">Категории</string>
    <string name="label_list_of_notes">Записи</string>
    <string name="label_default_for_result">Ничего</string>
    <string name="text_monthly_report">Отчет\nза месяц</string>
    <string name="text_category">Категория</string>
    <string name="text_text">Текст</string>
    <string name="text_time">Дата</string>
    <string name="text_sum">Сумма</string>
    <string name="PickCategory">Выбрать</string>
    <string name="text_type">Тип</string>
    <string name="incomes_text">Доходы</string>
    <string name="expenses_text">Расходы</string>
    <string name="select">Выбрать</string>
    <string name="text_add_a_note">Добавить запись</string>

    //названия кнопок
    <string name="btn_prev">ПРЕД</string>
    <string name="btn_select_date">ВЫБРАТЬ ДАТУ</string>
    <string name="btn_next">СЛЕД</string>
    <string name="btn_delete">УДАЛИТЬ</string>
    <string name="btn_save">СОХРАНИТЬ</string>
    <string name="btn_delete_category">УДАЛИТЬ</string>

    //ошибки
    <string name="error_deleting_category">"Записи с этой категорией существуют!!"</string>
    <string name="error_empty_the_text">Заполните текст записи!</string>
    <string name="error_empty_fields">Заполните все поля!</string>
    <string name="error_empty_the_date">Заполните дату записи!</string>
    <string name="error_empty_the_sum">Заполните сумму записи!</string>
    <string name="error_empty_count_categories">Создайте хотя бы одну категорию!</string>

    //подсказки
    <string name="hint_pick_the_date">Выбрать дату</string>
    <string name="hint_pick_the_category">Выбрать</string>
    <string name="hint_enter_the_text">Введите техт</string>
    <string name="hint_add_the_category">Добавить категорию</string>
    <string name="hint_enter_a_sum">Введите сумму</string>
    <string name="hint_add_a_new_note">Добавить новую запись</string>
    <string name="hint_incomes_per_day">Доходы за день</string>
    <string name="hint_expenses_per_day">Расходы за день</string>

    //предупреждения
    <string name="warning_empty_list_notes">Необходимо внести хотя бы одну запись о доходах/расходах</string>

    //Сообщения
    <string name="msg_no_notes">Нет записей</string>

    //Шапка таблицы записей
    <string name="name">Название</string>
    <string name="category">Категория</string>
    <string name="sum">Сумма</string>
    <string name="daily_results">Дневные итоги</string>
    <string name="day">День</string>

    //типы категорий
    <string-array name="income_expense">
        <item name="income">Доходы</item>
        <item name="expense">Расходы</item>
    </string-array>

    //изначальные категории(расходы)
    <string-array name="categories_default_expenses">
        <item name="food">Еда</item>
        <item name="clothes">Одежда</item>
        <item name="medicine">Лекарства</item>
    </string-array>

    //изначальные категории(доходы)
    <string-array name="categories_default_incomes">
        <item name="salary">Зарплата</item>
        <item name="gifts">Подарки</item>
        <item name="bonus">Премии</item>
    </string-array>

    //месяцы
    <string-array name="months">
        <item name="january">Январь</item>
        <item name="february">Февраль</item>
        <item name="march">Март</item>
        <item name="april">Апрель</item>
        <item name="may">Май</item>
        <item name="june">Июнь</item>
        <item name="july">Июль</item>
        <item name="august">Август</item>
        <item name="september">Сентябрь</item>
        <item name="october">Октябрь</item>v
        <item name="november">Ноябрь</item>
        <item name="december">Декабрь</item>
    </string-array>
</resources>
