<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/gradient_for_note_list_background"
    android:textSize="20sp"
    tools:context=".AddNoteActivity">


    <TextView
        android:id="@+id/existOrNot"
        style="@style/UsualTitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/text_creating_note">
    </TextView>

    <TextView
        android:id="@+id/id_of_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            style="@style/UsualButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_time">
        </TextView>

        <EditText
            android:id="@+id/enter_the_date_note"
            style="@style/UsualEditViewStyle"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="2"
            android:clickable="true"
            android:editable="false"
            android:hint="@string/hint_pick_the_date"
            android:onClick="pickDate">

        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_text"
            style="@style/UsualButtonStyle">
        </TextView>

        <EditText
            android:id="@+id/enter_the_text_note"
            android:layout_width="0dp"
            android:layout_height="60dp"
            style="@style/UsualEditViewStyle"
            android:layout_weight="2">
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:weightSum="9">

        <TextView
            style="@style/UsualButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/text_category">
        </TextView>

        <Spinner
            android:id="@+id/pick_the_category_note"
            style="@style/UsualSpinnerStyle"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="4.8"
            android:hint="@string/hint_pick_the_date">
        </Spinner>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:background="@android:drawable/ic_menu_add"
            android:onClick="addCategory">
        </Button>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_sum"
            style="@style/UsualButtonStyle">
        </TextView>

        <EditText
            android:id="@+id/sum_note"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="2"
            android:ems="10"
            style="@style/UsualEditViewStyle"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="2">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="create"
            android:text="@string/btn_save"
            style="@style/FunctionalButtons">
        </Button>

        <Button
            android:id="@+id/delete_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="delete"
            android:text="@string/btn_delete"
            style="@style/FunctionalButtons">
        </Button>
    </LinearLayout>



</LinearLayout>