<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".AddCategoryActivity"
    android:gravity="center"
    android:background="@drawable/gradient_for_category_list_background"
    android:orientation="vertical"
    android:textSize="20sp">


    <TextView
        android:id="@+id/existOrNot"
        style="@style/UsualTitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/text_creating_category"
        android:textSize="20sp">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal">

        <TextView
            style="@style/UsualButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_text"
            android:textSize="20sp">
        </TextView>

        <EditText
            android:id="@+id/enter_the_text_category"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            style="@style/UsualEditViewStyle">
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal">

        <TextView
            style="@style/UsualButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_type">
        </TextView>

        <Spinner
            android:id="@+id/enter_the_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/UsualSpinnerStyle"
            android:textSize="20sp">
        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="create"
            android:text="@string/btn_save"
            android:layout_weight="1"
            style="@style/FunctionalButtons">
        </Button>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="delete"
            android:text="@string/btn_delete"
            android:layout_weight="1"
            style="@style/FunctionalButtons">
        </Button>

    </LinearLayout>


</LinearLayout>