<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Activity.ReportActivity">

    <TextView
        style="@style/UsualTitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:text="@string/text_monthly_report">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3">

        <Spinner
            style="@style/UsualSpinnerStyle"
            android:id="@+id/spinner_months"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1">
        </Spinner>

        <Spinner
            style="@style/UsualSpinnerStyle"
            android:id="@+id/spinner_years"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1">
        </Spinner>

        <Button
            style="@style/UsualButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/btn_select"
            android:text="@string/select"
            android:onClick="select">
        </Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/UsualTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/incomes_text">
        </TextView>

        <TextView
            style="@style/UsualEditViewStyle"
            android:id="@+id/text_incomes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:text="@string/label_default_for_result">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/UsualTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/expenses_text">
        </TextView>

        <TextView
            style="@style/UsualEditViewStyle"
            android:id="@+id/text_expenses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:text="@string/label_default_for_result">
        </TextView>
    </LinearLayout>

</LinearLayout>