<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="?android:attr/buttonBarStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary">
        </androidx.appcompat.widget.Toolbar>
        <!--            app:popupTheme="@style/AppTheme.PopupOverlay" />-->

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:id="@+id/date_and_button"
        android:orientation="horizontal"
        android:layout_below="@id/app_bar_layout"
        android:gravity="center"
        android:onClick="showFilter">

        <TextView
            android:id="@+id/date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <ImageButton
            android:id="@+id/show_filter"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:onClick="checkFilter"
            android:background="@drawable/cursors_down">
        </ImageButton>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/date_and_button"
        android:gravity="center"
        android:visibility="gone">
        <CheckBox
            android:id="@+id/checkbox_incomes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="checkFilter">
        </CheckBox>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/incomes_text"
            style="@style/FilterLabelText">
        </TextView>
        <CheckBox
            android:id="@+id/checkbox_expenses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="checkFilter">
        </CheckBox>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expenses_text"
            style="@style/FilterLabelText">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/table_head"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@+id/filter"
        android:background="@drawable/gradient_for_note_background">
        <TextView
            android:id="@+id/name_of_note"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="3dp"
            android:layout_weight="1"
            android:gravity="center"
            android:lines="@android:integer/config_longAnimTime"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/name">
        </TextView>

        <TextView
            android:id="@+id/category"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="3dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/category">
        </TextView>

        <TextView
            android:id="@+id/amount"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="3dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/sum">
        </TextView>
    </LinearLayout>

    <TextView
        android:id="@+id/empty_list"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginBottom="3dp"
        android:layout_below="@+id/table_head"
        android:gravity="center"
        android:lines="@android:integer/config_longAnimTime"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:text="@string/msg_no_notes">
    </TextView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_of_notes"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:contentDescription="@string/label_list_of_notes"
        android:layout_below="@id/empty_list"
        android:scrollbars="vertical" />

    <LinearLayout
        android:id="@+id/results_per_day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_below="@id/list_of_notes"
        android:layout_above="@id/buttons"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/incomes_text"
                style="@style/ResultsPerDayLabelText">
            </TextView>

            <TextView
                android:id="@+id/income_per_day_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_default_for_result"
                style="@style/ResultsPerDayLabelText">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/expenses_text"
                style="@style/ResultsPerDayLabelText">
            </TextView>

            <TextView
                android:id="@+id/expense_per_day_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_default_for_result"
                style="@style/ResultsPerDayLabelText">
            </TextView>
        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="20dp"
            android:foregroundGravity="center"
            android:layout_margin="@dimen/fab_margin"
            android:layout_weight="1"
            android:contentDescription="@string/text_add_a_note"
            android:onClick="addNote"
            android:paddingBottom="20dp"
            app:backgroundTint="@android:color/background_light"
            app:borderWidth="1dp"
            app:srcCompat="@android:drawable/ic_input_add" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/prev"
            style="@style/FunctionalButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="setDate"
            android:text="@string/btn_prev"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/select"
            style="@style/FunctionalButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="selectDate"
            android:text="@string/btn_select_date"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/next"
            style="@style/FunctionalButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="setDate"
            android:text="@string/btn_next"
            android:textColor="@color/white" />
    </LinearLayout>

</RelativeLayout>