<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.CategoryActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:weightSum="3"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimary"
        android:layout_height="20dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:id="@+id/day_results"
            android:textStyle="bold"
            android:text="@string/daily_results">
        </TextView>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/incomes_text">
        </TextView>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/expenses_text">
        </TextView>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:id="@+id/list_of_results"/>

</LinearLayout>